feat: figure out how to get PyRadiomics index set up from MIT and READII index files

--- a/sandbox/image_type_indexing.ipynb
+++ b/sandbox/image_type_indexing.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "3fbed991",
    "metadata": {},
    "outputs": [],
@@ -197,11 +197,19 @@
     "image_modality = dataset_config[\"MIT\"][\"MODALITIES\"][\"image\"]\n",
     "mask_modality = dataset_config[\"MIT\"][\"MODALITIES\"][\"mask\"]\n",
     "\n",
+    "readii_image_dir = mit_images_dir_path.parent / f'readii_{dataset_name}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59075b5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "masked_image_index = get_masked_image_metadata(dataset_index = dataset_index,\n",
     "                                                image_modality = image_modality,\n",
     "                                                mask_modality = mask_modality)\n",
-    "\n",
-    "readii_image_dir = mit_images_dir_path.parent / f'readii_{dataset_name}'\n",
     "\n",
     "# Set up writer for saving out the negative controls\n",
     "nifti_writer = NIFTIWriter(\n",
@@ -264,9 +272,310 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "109ced0b",
+   "metadata": {},
+   "source": [
+    "# Set up index for PyRadiomics from MIT and READII index files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7cbe7da1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MIT_index_file = mit_images_dir_path / f'mit_{dataset_name}_index-simple.csv'\n",
+    "MIT_index = pd.read_csv(MIT_index_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "a2d70060",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_rows = MIT_index[MIT_index['Modality'] == image_modality]\n",
+    "mask_rows = MIT_index[MIT_index['Modality'] == mask_modality]\n",
+    "\n",
+    "MIT_merge_index = pd.merge(\n",
+    "    image_rows,\n",
+    "    mask_rows,\n",
+    "    left_on=['SeriesInstanceUID', 'SampleNumber', 'PatientID'],\n",
+    "    right_on=['ReferencedSeriesUID', 'SampleNumber', 'PatientID'],\n",
+    "    suffixes=('_image', '_mask')\n",
+    ")\n",
+    "\n",
+    "# image_mask_match_pd['SampleNumber'] = image_mask_match_pd['SampleNumber'].astype(str).str.zfill(4)\n",
+    "\n",
+    "# image_mask_match_pd['READII_ID'] = image_mask_match_pd.apply(lambda x: f\"{x['PatientID']}_{x['SampleNumber']}_{x['ImageID_mask']}\", axis=1)\n",
+    "\n",
+    "# image_mask_match_pd.set_index(\n",
+    "#     image_mask_match_pd['READII_ID'],\n",
+    "#     inplace=True)\n",
+    "\n",
+    "# image_mask_match_pd = image_mask_match_pd[[\"filepath_image\", \"filepath_mask\"]]\n",
+    "# image_mask_match_pd.rename(columns={\"filepath_image\": \"Image\", \"filepath_mask\": \"Mask\"}, inplace=True)\n",
+    "# image_mask_match_pd.to_csv(f\"{dirs.PROCDATA / full_data_name / f'readii_{dataset_name}_image_mask_match.csv'}\", index=True)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cbe7da1",
+   "id": "1b3d170b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SampleID</th>\n",
+       "      <th>MaskID</th>\n",
+       "      <th>Permutation</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Image</th>\n",
+       "      <th>Mask</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LUNG1-001_0000</td>\n",
+       "      <td>GTV</td>\n",
+       "      <td>original</td>\n",
+       "      <td>full</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-001_0000/CT_633...</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-001_0000/RTSTRU...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LUNG1-001_0000</td>\n",
+       "      <td>Lung-Left</td>\n",
+       "      <td>original</td>\n",
+       "      <td>full</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-001_0000/CT_633...</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-001_0000/RTSTRU...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LUNG1-002_0001</td>\n",
+       "      <td>GTV</td>\n",
+       "      <td>original</td>\n",
+       "      <td>full</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-002_0001/CT_232...</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LUNG1-002_0001</td>\n",
+       "      <td>Lung-Left</td>\n",
+       "      <td>original</td>\n",
+       "      <td>full</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-002_0001/CT_232...</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         SampleID     MaskID Permutation Region  \\\n",
+       "0  LUNG1-001_0000        GTV    original   full   \n",
+       "1  LUNG1-001_0000  Lung-Left    original   full   \n",
+       "2  LUNG1-002_0001        GTV    original   full   \n",
+       "3  LUNG1-002_0001  Lung-Left    original   full   \n",
+       "\n",
+       "                                               Image  \\\n",
+       "0  mit_NSCLC-Radiomics_test/LUNG1-001_0000/CT_633...   \n",
+       "1  mit_NSCLC-Radiomics_test/LUNG1-001_0000/CT_633...   \n",
+       "2  mit_NSCLC-Radiomics_test/LUNG1-002_0001/CT_232...   \n",
+       "3  mit_NSCLC-Radiomics_test/LUNG1-002_0001/CT_232...   \n",
+       "\n",
+       "                                                Mask  \n",
+       "0  mit_NSCLC-Radiomics_test/LUNG1-001_0000/RTSTRU...  \n",
+       "1  mit_NSCLC-Radiomics_test/LUNG1-001_0000/RTSTRU...  \n",
+       "2  mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...  \n",
+       "3  mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_mask_match_mit = pd.DataFrame(\n",
+    "    data={\"SampleID\": MIT_merge_index.apply(lambda x: f\"{x.PatientID}_{str(x.SampleNumber).zfill(4)}\", axis=1),\n",
+    "          \"MaskID\": MIT_merge_index['ImageID_mask']\n",
+    "          \"Permutation\": \"original\",\n",
+    "          \"Region\": \"full\",\n",
+    "          \"Image\": MIT_merge_index.apply(lambda x: f\"{Path(f\"mit_{dataset_name}\") / x.filepath_image}\", axis=1),\n",
+    "          \"Mask\": MIT_merge_index.apply(lambda x: f\"{Path(f\"mit_{dataset_name}\") / x.filepath_mask}\", axis=1)\n",
+    "          }\n",
+    ")\n",
+    "image_mask_match_mit.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "07f3b7f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "READII_index_file = readii_image_dir / f'readii_{dataset_name}_index.csv'\n",
+    "READII_index = pd.read_csv(READII_index_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "0194e6b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SampleID</th>\n",
+       "      <th>MaskID</th>\n",
+       "      <th>Permutation</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Image</th>\n",
+       "      <th>Mask</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LUNG1-002_0001</td>\n",
+       "      <td>GTV</td>\n",
+       "      <td>sampled</td>\n",
+       "      <td>full</td>\n",
+       "      <td>readii_NSCLC-Radiomics_test/LUNG1-002_0001/CT_...</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LUNG1-002_0001</td>\n",
+       "      <td>GTV</td>\n",
+       "      <td>sampled</td>\n",
+       "      <td>roi</td>\n",
+       "      <td>readii_NSCLC-Radiomics_test/LUNG1-002_0001/CT_...</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LUNG1-002_0001</td>\n",
+       "      <td>GTV</td>\n",
+       "      <td>sampled</td>\n",
+       "      <td>non_roi</td>\n",
+       "      <td>readii_NSCLC-Radiomics_test/LUNG1-002_0001/CT_...</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LUNG1-002_0001</td>\n",
+       "      <td>GTV</td>\n",
+       "      <td>shuffled</td>\n",
+       "      <td>full</td>\n",
+       "      <td>readii_NSCLC-Radiomics_test/LUNG1-002_0001/CT_...</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LUNG1-002_0001</td>\n",
+       "      <td>GTV</td>\n",
+       "      <td>shuffled</td>\n",
+       "      <td>roi</td>\n",
+       "      <td>readii_NSCLC-Radiomics_test/LUNG1-002_0001/CT_...</td>\n",
+       "      <td>mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         SampleID MaskID Permutation   Region  \\\n",
+       "0  LUNG1-002_0001    GTV     sampled     full   \n",
+       "1  LUNG1-002_0001    GTV     sampled      roi   \n",
+       "2  LUNG1-002_0001    GTV     sampled  non_roi   \n",
+       "3  LUNG1-002_0001    GTV    shuffled     full   \n",
+       "4  LUNG1-002_0001    GTV    shuffled      roi   \n",
+       "\n",
+       "                                               Image  \\\n",
+       "0  readii_NSCLC-Radiomics_test/LUNG1-002_0001/CT_...   \n",
+       "1  readii_NSCLC-Radiomics_test/LUNG1-002_0001/CT_...   \n",
+       "2  readii_NSCLC-Radiomics_test/LUNG1-002_0001/CT_...   \n",
+       "3  readii_NSCLC-Radiomics_test/LUNG1-002_0001/CT_...   \n",
+       "4  readii_NSCLC-Radiomics_test/LUNG1-002_0001/CT_...   \n",
+       "\n",
+       "                                                Mask  \n",
+       "0  mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...  \n",
+       "1  mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...  \n",
+       "2  mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...  \n",
+       "3  mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...  \n",
+       "4  mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...  "
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_mask_match_readii = pd.DataFrame(\n",
+    "    data={\"SampleID\": READII_index.apply(lambda x: f\"{Path(x.dir_original_image).parent}\", axis=1),\n",
+    "          \"MaskID\": READII_index['ImageID_mask'],\n",
+    "          \"Permutation\": READII_index[\"Permutation\"],\n",
+    "          \"Region\": READII_index[\"Region\"],\n",
+    "          \"Image\": READII_index.apply(lambda x: f\"{Path(f\"readii_{dataset_name}\") / x.filepath}\", axis=1),\n",
+    "          \"Mask\": READII_index.apply(lambda x: f\"{Path(f\"mit_{dataset_name}\") / Path(x.dir_original_image).parent / x.dirname_mask / x.ImageID_mask}.nii.gz\", axis=1),\n",
+    "          }\n",
+    ")\n",
+    "image_mask_match_readii.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fd2f930",
    "metadata": {},
    "outputs": [],
    "source": []
