feat: add concatenation of the readii and imgtools index files

--- a/sandbox/image_type_indexing.ipynb
+++ b/sandbox/image_type_indexing.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "3fbed991",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "7cbe7da1",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "a2d70060",
    "metadata": {},
    "outputs": [],
@@ -306,24 +306,12 @@
     "    left_on=['SeriesInstanceUID', 'SampleNumber', 'PatientID'],\n",
     "    right_on=['ReferencedSeriesUID', 'SampleNumber', 'PatientID'],\n",
     "    suffixes=('_image', '_mask')\n",
-    ")\n",
-    "\n",
-    "# image_mask_match_pd['SampleNumber'] = image_mask_match_pd['SampleNumber'].astype(str).str.zfill(4)\n",
-    "\n",
-    "# image_mask_match_pd['READII_ID'] = image_mask_match_pd.apply(lambda x: f\"{x['PatientID']}_{x['SampleNumber']}_{x['ImageID_mask']}\", axis=1)\n",
-    "\n",
-    "# image_mask_match_pd.set_index(\n",
-    "#     image_mask_match_pd['READII_ID'],\n",
-    "#     inplace=True)\n",
-    "\n",
-    "# image_mask_match_pd = image_mask_match_pd[[\"filepath_image\", \"filepath_mask\"]]\n",
-    "# image_mask_match_pd.rename(columns={\"filepath_image\": \"Image\", \"filepath_mask\": \"Mask\"}, inplace=True)\n",
-    "# image_mask_match_pd.to_csv(f\"{dirs.PROCDATA / full_data_name / f'readii_{dataset_name}_image_mask_match.csv'}\", index=True)\n"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1b3d170b",
    "metadata": {},
    "outputs": [
@@ -417,7 +405,7 @@
        "3  mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +413,7 @@
    "source": [
     "image_mask_match_mit = pd.DataFrame(\n",
     "    data={\"SampleID\": MIT_merge_index.apply(lambda x: f\"{x.PatientID}_{str(x.SampleNumber).zfill(4)}\", axis=1),\n",
-    "          \"MaskID\": MIT_merge_index['ImageID_mask']\n",
+    "          \"MaskID\": MIT_merge_index['ImageID_mask'],\n",
     "          \"Permutation\": \"original\",\n",
     "          \"Region\": \"full\",\n",
     "          \"Image\": MIT_merge_index.apply(lambda x: f\"{Path(f\"mit_{dataset_name}\") / x.filepath_image}\", axis=1),\n",
@@ -437,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "07f3b7f8",
    "metadata": {},
    "outputs": [],
@@ -448,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "id": "0194e6b0",
    "metadata": {},
    "outputs": [
@@ -554,7 +542,7 @@
        "4  mit_NSCLC-Radiomics_test/LUNG1-002_0001/RTSTRU...  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,8 +562,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "3fd2f930",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyradiomics_index = pd.concat([image_mask_match_mit, image_mask_match_readii], ignore_index=True, axis=0)\n",
+    "pyradiomics_index.sort_values(by=['Permutation', 'Region', 'SampleID', 'MaskID', ], inplace=True, ignore_index=True)\n",
+    "\n",
+    "features_dir = dirs.PROCDATA / full_data_name / \"features\"\n",
+    "features_dir.mkdir(parents=True, exist_ok=True)\n",
+    "pyradiomics_index.to_csv(dirs.PROCDATA / full_data_name / \"features\" / f'pyradiomics_{dataset_name}_index.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43eb124f",
    "metadata": {},
    "outputs": [],
    "source": []
