refactor: ruff linting auto-corrections

--- a/sandbox/debug_make_negative_controls.ipynb
+++ b/sandbox/debug_make_negative_controls.ipynb
@@ -25,15 +25,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import SimpleITK as sitk\n",
-    "import pandas as pd\n",
-    "\n",
     "from pathlib import Path\n",
-    "from damply import dirs\n",
-    "from joblib import Parallel, delayed\n",
     "from typing import Optional\n",
     "\n",
-    "from readii.image_processing import flattenImage, alignImages\n",
+    "import pandas as pd\n",
+    "import SimpleITK as sitk\n",
+    "from damply import dirs\n",
+    "from readii.image_processing import alignImages, flattenImage\n",
     "from readii.io.loaders import loadImageDatasetConfig\n",
     "from readii.io.writers.nifti_writer import NIFTIWriter, NiftiWriterIOError\n",
     "from readii.negative_controls_refactor import NegativeControlManager\n",
@@ -162,7 +160,7 @@
     "                        region=region,\n",
     "                        permutation=permutation\n",
     "                    )\n",
-    "    except NiftiWriterIOError as e:\n",
+    "    except NiftiWriterIOError:\n",
     "        message = f\"{permutation} {region} negative control file already exists for {patient_id}. If you wish to overwrite, set overwrite to true in the NIFTIWriter.\"\n",
     "        logger.debug(message)\n",
     "\n",
