--- a/sandbox/dev_feature_extraction.ipynb
+++ b/sandbox/dev_feature_extraction.ipynb
@@ -7,11 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from radiomics import featureextractor\n",
-    "from damply import dirs\n",
     "from pathlib import Path\n",
+    "\n",
+    "import pandas as pd\n",
     "import SimpleITK as sitk\n",
-    "import pandas as pd"
+    "from damply import dirs\n",
+    "from radiomics import featureextractor"
    ]
   },
   {
@@ -576,7 +577,10 @@
    ],
    "source": [
     "import sys; sys.path.append(\"../workflow/scripts\")\n",
-    "from feature_extraction.extract import extract_dataset_features, pyradiomics_extract, compile_dataset_features\n",
+    "from feature_extraction.extract import (\n",
+    "    compile_dataset_features,\n",
+    "    extract_dataset_features,\n",
+    ")\n",
     "\n",
     "compile_dataset_features(dataset_index=dataset_index,\n",
     "                          method=\"pyradiomics\",\n",
@@ -642,7 +646,8 @@
     }
    ],
    "source": [
-    "from itertools import product \n",
+    "from itertools import product\n",
+    "\n",
     "list(product(dataset_index['readii_Permutation'].unique(), dataset_index['readii_Region'].unique()))"
    ]
   },
@@ -786,6 +791,7 @@
    "outputs": [],
    "source": [
     "from collections import OrderedDict\n",
+    "\n",
     "od_metadata = metadata.to_dict(into=OrderedDict)"
    ]
   },
@@ -1269,7 +1275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
