--- a/sandbox/get_seg_file_metadata.ipynb
+++ b/sandbox/get_seg_file_metadata.ipynb
@@ -7,10 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from imgtools.coretypes.masktypes import RTStructureSet\n",
-    "from pathlib import Path\n",
     "import csv\n",
-    "from damply import dirs"
+    "from pathlib import Path\n",
+    "\n",
+    "from damply import dirs\n",
+    "from imgtools.coretypes.masktypes import RTStructureSet"
    ]
   },
   {
@@ -132,7 +133,9 @@
     }
    ],
    "source": [
-    "from imgtools.dicom.dicom_metadata.modality_utils.rtstruct_utils import extract_roi_names\n",
+    "from imgtools.dicom.dicom_metadata.modality_utils.rtstruct_utils import (\n",
+    "    extract_roi_names,\n",
+    ")\n",
     "from pydicom import dcmread\n",
     "\n",
     "rtstruct = dcmread(broken_file)\n",
@@ -204,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from imgtools.coretypes.masktypes.roi_matching import ROIMatcher, handle_roi_matching\n",
+    "from imgtools.coretypes.masktypes.roi_matching import handle_roi_matching\n",
     "\n",
     "roi_matching = {\"GTV\": [\".*\"]}\n",
     "roi_names = extract_roi_names(rtstruct)\n",
@@ -277,8 +280,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from imgtools.autopipeline import SIMPLIFIED_COLUMNS\n",
     "import pandas as pd\n",
+    "from imgtools.autopipeline import SIMPLIFIED_COLUMNS\n",
     "\n",
     "dataset = \"TCGA-KIRC\"\n",
     "path = dirs.PROCDATA / f\"TCIA_{dataset}\" / \"images\" / f\"mit_{dataset}\" / f\"mit_{dataset}_index.csv\"\n",
@@ -3021,7 +3024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
