--- a/sandbox/image_type_indexing.ipynb
+++ b/sandbox/image_type_indexing.ipynb
@@ -24,22 +24,18 @@
     }
    ],
    "source": [
-    "import SimpleITK as sitk\n",
-    "import pandas as pd\n",
-    "\n",
     "from pathlib import Path\n",
-    "from damply import dirs\n",
-    "from joblib import Parallel, delayed\n",
     "from typing import Optional\n",
-    "from itertools import chain\n",
     "\n",
-    "from readii.image_processing import flattenImage, alignImages\n",
-    "from readii.io.loaders import loadImageDatasetConfig\n",
+    "import pandas as pd\n",
+    "import SimpleITK as sitk\n",
+    "from damply import dirs\n",
     "from imgtools.io.writers.nifti_writer import NIFTIWriter, NiftiWriterIOError\n",
+    "from readii.image_processing import alignImages, flattenImage\n",
+    "from readii.io.loaders import loadImageDatasetConfig\n",
     "from readii.negative_controls_refactor import NegativeControlManager\n",
     "from readii.process.config import get_full_data_name\n",
     "from readii.utils import logger\n",
-    "\n",
     "\n",
     "\n",
     "def get_readii_settings(dataset_config: dict) -> tuple[list, list, list]:\n",
@@ -147,7 +143,7 @@
     "                        mask_roi_name=mask_roi_name,\n",
     "                        orig_image_dirs=orig_image_dirs\n",
     "                    )\n",
-    "    except NiftiWriterIOError as e:\n",
+    "    except NiftiWriterIOError:\n",
     "        message = f\"{permutation} {region} negative control file already exists for {patient_id}. If you wish to overwrite, set overwrite to true in the NIFTIWriter.\"\n",
     "        logger.debug(message)\n",
     "        \n",
@@ -1160,7 +1156,7 @@
    "outputs": [],
    "source": [
     "pyradiomics_index = pd.concat([image_mask_match_mit, image_mask_match_readii], ignore_index=True, axis=0)\n",
-    "pyradiomics_index.sort_values(by=['Permutation', 'Region', 'SampleID', 'MaskID', ], inplace=True, ignore_index=True)\n",
+    "pyradiomics_index.sort_values(by=['Permutation', 'Region', 'SampleID', 'MaskID' ], inplace=True, ignore_index=True)\n",
     "\n",
     "features_dir = dirs.PROCDATA / full_data_name / \"features\"\n",
     "features_dir.mkdir(parents=True, exist_ok=True)\n",
