--- a/sandbox/merge_TCGA-KIRC_data.ipynb
+++ b/sandbox/merge_TCGA-KIRC_data.ipynb
@@ -7,11 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from pathlib import Path\n",
     "\n",
-    "from damply import dirs\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from damply import dirs"
    ]
   },
   {
