--- a/workflow/notebooks/0n-feature-selection.ipynb
+++ b/workflow/notebooks/0n-feature-selection.ipynb
@@ -7,17 +7,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import Lasso \n",
-    "from sksurv.metrics import concordance_index_censored\n",
-    "\n",
-    "import pandas as pd\n",
-    "from readii.io.loaders import loadImageDatasetConfig, loadFileToDataFrame\n",
-    "from readii.process.subset import getPatientIntersectionDataframes\n",
-    "from readii.process.label import addOutcomeLabels, eventOutcomeColumnSetup, timeOutcomeColumnSetup, getPatientIdentifierLabel\n",
-    "from readii.process.split import splitDataByColumnValue\n",
     "from pathlib import Path\n",
+    "\n",
     "import numpy as np\n",
-    "import yaml"
+    "import pandas as pd\n",
+    "import yaml\n",
+    "from readii.io.loaders import loadFileToDataFrame, loadImageDatasetConfig\n",
+    "from readii.process.label import (\n",
+    "    eventOutcomeColumnSetup,\n",
+    "    getPatientIdentifierLabel,\n",
+    "    timeOutcomeColumnSetup,\n",
+    ")\n",
+    "from readii.process.split import splitDataByColumnValue\n",
+    "from readii.process.subset import getPatientIntersectionDataframes\n",
+    "from sklearn.linear_model import Lasso\n",
+    "from sksurv.metrics import concordance_index_censored"
    ]
   },
   {
