refactor: move feature selection notebook to sandbox

--- a/sandbox/0n-feature-selection.ipynb
+++ b/sandbox/0n-feature-selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "96dabc4b",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import yaml\n",
+    "from damply import dirs\n",
     "from readii.io.loaders import loadFileToDataFrame, loadImageDatasetConfig\n",
     "from readii.process.label import (\n",
     "    eventOutcomeColumnSetup,\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f5763f29",
    "metadata": {},
    "outputs": [],
@@ -43,25 +44,19 @@
     "config = loadImageDatasetConfig(\"NSCLC-Radiomics\", Path(\"../../config/datasets\"))\n",
     "\n",
     "# Initialize dataset parameters\n",
-    "CLINICAL_DATA_FILE = config[\"CLINICAL_FILE\"]\n",
-    "OUTCOME_VARIABLES = config[\"OUTCOME_VARIABLES\"]\n",
+    "CLINICAL_DATA_FILE = config[\"CLINICAL\"][\"FILE\"]\n",
+    "OUTCOME_VARIABLES = config[\"CLINICAL\"][\"OUTCOME_VARIABLES\"]\n",
     "\n",
     "DATASET_NAME = config[\"DATA_SOURCE\"] + \"_\" + config[\"DATASET_NAME\"]\n",
     "\n",
-    "RANDOM_SEED = 10\n",
-    "\n",
-    "# general data directory path setup\n",
-    "DATA_DIR_PATH = Path(\"../../data\")\n",
-    "RAW_DATA_PATH = DATA_DIR_PATH / \"rawdata\" / DATASET_NAME\n",
-    "PROC_DATA_PATH = DATA_DIR_PATH / \"procdata\" / DATASET_NAME\n",
-    "RESULTS_DATA_PATH = DATA_DIR_PATH / \"results\" / DATASET_NAME\n",
+    "RANDOM_SEED = config['RANDOM_SEED']\n",
     "\n",
     "# train test split settings\n",
-    "TRAIN_TEST_SPLIT = config[\"TRAIN_TEST_SPLIT\"]\n",
+    "TRAIN_TEST_SPLIT = config[\"READII\"][\"TRAIN_TEST_SPLIT\"]\n",
     "\n",
-    "pyradiomics_settings = \"pyradiomics_original_plus_aerts\"\n",
+    "pyradiomics_settings = config[\"EXTRACTION\"][\"CONFIG\"]\n",
     "\n",
-    "signature_dir = PROC_DATA_PATH / \"signature_data\" / \"aerts_original\"\n",
+    "signature_dir = dirs.PROCDATA / \"signature_data\" / \"aerts_original\"\n",
     "signature_dir.mkdir(parents=True, exist_ok=True)"
    ]
   },
@@ -86,10 +81,22 @@
    "execution_count": null,
    "id": "d47ef626",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'MIT_INDEX_FILE'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     10\u001b[39m     clinical_data = split_data[\u001b[33m'\u001b[39m\u001b[33mtest\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# Load the Med-ImageTools index to use for mapping TCIA IDs to local file names\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m mit_index = loadFileToDataFrame((dirs.RAWDATA / \u001b[33m\"\u001b[39m\u001b[33mimages\u001b[39m\u001b[33m\"\u001b[39m / \u001b[43mconfig\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mMIT_INDEX_FILE\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m))\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33mSampleID\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mit_index.columns:\n\u001b[32m     16\u001b[39m     mit_index[\u001b[33m'\u001b[39m\u001b[33mSampleID\u001b[39m\u001b[33m'\u001b[39m] = config[\u001b[33m\"\u001b[39m\u001b[33mDATASET_NAME\u001b[39m\u001b[33m\"\u001b[39m] + \u001b[33m\"\u001b[39m\u001b[33m_\u001b[39m\u001b[33m\"\u001b[39m + mit_index[\u001b[33m'\u001b[39m\u001b[33mSampleNumber\u001b[39m\u001b[33m'\u001b[39m].astype(\u001b[38;5;28mstr\u001b[39m).str.zfill(\u001b[32m3\u001b[39m)\n",
+      "\u001b[31mKeyError\u001b[39m: 'MIT_INDEX_FILE'"
+     ]
+    }
+   ],
    "source": [
     "# Load clinical data file\n",
-    "raw_clinical_data = loadFileToDataFrame((RAW_DATA_PATH / \"clinical\" / CLINICAL_DATA_FILE))\n",
+    "raw_clinical_data = loadFileToDataFrame((dirs.RAWDATA / DATASET_NAME / \"clinical\" / CLINICAL_DATA_FILE))\n",
     "clinical_pat_id = getPatientIdentifierLabel(raw_clinical_data)\n",
     "\n",
     "if TRAIN_TEST_SPLIT['split']:\n",
@@ -99,8 +106,8 @@
     "    # TODO: don't default to test string\n",
     "    clinical_data = split_data['test']\n",
     "\n",
-    "# Load the Med-ImageTools index to use for mapping TCIA IDs to local file names\n",
-    "mit_index = loadFileToDataFrame((RAW_DATA_PATH / \"images\" / config[\"MIT_INDEX_FILE\"]))\n",
+    "# Load the extraction index to use for mapping TCIA IDs to local file names\n",
+    "mit_index = loadFileToDataFrame(dirs.PROCDATA / DATASET_NAME / \"features\" / )\n",
     "\n",
     "if 'SampleID' not in mit_index.columns:\n",
     "    mit_index['SampleID'] = config[\"DATASET_NAME\"] + \"_\" + mit_index['SampleNumber'].astype(str).str.zfill(3)\n",
@@ -109,11 +116,11 @@
     "# PatientID is TCIA ID\n",
     "id_map = mit_index['SampleID']\n",
     "id_map.index = mit_index[\"PatientID\"]\n",
-    "id_map.drop_duplicates(inplace=True)\n",
+    "id_map = id_map.drop_duplicates()\n",
     "\n",
     "# Map the SampleIDs to the clinical data and add as a column for intersection\n",
     "raw_clinical_data['SampleID'] = raw_clinical_data[clinical_pat_id].map(id_map)\n",
-    "raw_clinical_data.set_index('SampleID', inplace=True)"
+    "raw_clinical_data = raw_clinical_data.set_index('SampleID')"
    ]
   },
   {
@@ -126,13 +133,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "88aa2514",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m12:24:00\u001b[0m [\u001b[31m\u001b[1merror    \u001b[0m] \u001b[1mFile /Users/katyscott/Documents/BHKLab_GitHub/readii_2_roqc/data/results/pyradiomics_original_single_feature.yaml/full_original_features.csv does not exist\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mgeneral.loadFileToDataFrame:95\u001b[0m\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m image_type = \u001b[33m\"\u001b[39m\u001b[33mfull_original\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m raw_feature_data = \u001b[43mloadFileToDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdirs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mRESULTS\u001b[49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[43mpyradiomics_settings\u001b[49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mimage_type\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m_features.csv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m raw_feature_data.rename(columns={\u001b[33m\"\u001b[39m\u001b[33mID\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mSampleID\u001b[39m\u001b[33m\"\u001b[39m}, inplace=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Set the index to SampleID\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/BHKLab_GitHub/readii_2_roqc/.pixi/envs/default/lib/python3.12/site-packages/readii/io/loaders/general.py:96\u001b[39m, in \u001b[36mloadFileToDataFrame\u001b[39m\u001b[34m(file_path)\u001b[39m\n\u001b[32m     94\u001b[39m     msg = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFile \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m does not exist\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     95\u001b[39m     logger.error(msg)\n\u001b[32m---> \u001b[39m\u001b[32m96\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m()\n\u001b[32m     98\u001b[39m \u001b[38;5;66;03m# Get the file extension\u001b[39;00m\n\u001b[32m     99\u001b[39m file_extension = file_path.suffix\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "image_type = \"full_original\"\n",
-    "raw_feature_data = loadFileToDataFrame((RESULTS_DATA_PATH / pyradiomics_settings / f\"{image_type}_features.csv\"))\n",
+    "raw_feature_data = loadFileToDataFrame((dirs.RESULTS / pyradiomics_settings / f\"{image_type}_features.csv\"))\n",
     "\n",
     "raw_feature_data.rename(columns={\"ID\": \"SampleID\"}, inplace=True)\n",
     "# Set the index to SampleID\n",
@@ -208,13 +235,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "38b4d8ba",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Path to the yaml file in the rawdata directory\n",
-    "radiomic_signature_yaml = RAW_DATA_PATH.parent / \"cph_weights_radiomic_signature\" / \"aerts_original.yaml\"\n",
+    "radiomic_signature_yaml = dirs.RAWDATA.parent / \"cph_weights_radiomic_signature\" / \"aerts_original.yaml\"\n",
     "\n",
     "try:\n",
     "    with open(radiomic_signature_yaml, 'r') as f:\n",
@@ -281,7 +308,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_LASSO(X_train, event_status_train, a_lasso):\n",
+    "def calc_LASSO(X_train : pd.DataFrame, \n",
+    "               event_status_train : pd.DataFrame, \n",
+    "               a_lasso : float\n",
+    "               ) -> np.array:\n",
     "    \"\"\"\n",
     "    Performs LASSO for feature selection\n",
     "   \n",
@@ -304,7 +334,7 @@
     "    lasso.fit(X_train, event_status_train)\n",
     "    lasso_coef = np.abs(lasso.coef_)\n",
     " \n",
-    "    all_rad_feats = X_train.columns.values.tolist()\n",
+    "    all_rad_feats = X_train.columns.to_numpy().tolist()\n",
     "    lasso_passed = np.array(all_rad_feats)[lasso_coef>0]\n",
     " \n",
     "    return(lasso_passed)"
@@ -374,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "e0d1570d",
    "metadata": {},
    "outputs": [],
@@ -389,7 +419,7 @@
     "\n",
     "bootstrap_count = 1000\n",
     "\n",
-    "for idx in range(bootstrap_count):\n",
+    "for _idx in range(bootstrap_count):\n",
     "    sampled_results = hazards_and_outcomes.sample(n=hazards_and_outcomes.shape[0], replace=True)\n",
     "\n",
     "    sampled_cindex, _concordant, _discordant, _tied_risk, _tied_time = concordance_index_censored(\n",
@@ -406,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "4909373f",
    "metadata": {},
    "outputs": [
@@ -422,10 +452,10 @@
     }
    ],
    "source": [
-    "print(\"Results\")\n",
-    "print(\"C-index: \", cindex)\n",
-    "print(\"Lower confidence interval: \", lower_confidence_interval)\n",
-    "print(\"Upper confidence interval: \", upper_confidence_interval)"
+    "# print(\"Results\")\n",
+    "# print(\"C-index: \", cindex)\n",
+    "# print(\"Lower confidence interval: \", lower_confidence_interval)\n",
+    "# print(\"Upper confidence interval: \", upper_confidence_interval)"
    ]
   },
   {
@@ -453,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
