refactor: move old run analysis notebook to sandbox

--- a/sandbox/run_analysis.ipynb
+++ b/sandbox/run_analysis.ipynb
@@ -31,20 +31,14 @@
     }
    ],
    "source": [
-    "import itertools\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
-    "from pathlib import Path\n",
-    "\n",
-    "from readii.io.loaders import loadImageDatasetConfig, loadFeatureFilesFromImageTypes\n",
-    "from readii.io.writers.correlation_writer import CorrelationWriter\n",
-    "from readii.analyze.correlation import getFeatureCorrelations, getSelfCorrelations\n",
-    "\n",
-    "from sklearn.cluster import AgglomerativeClustering \n",
-    "\n",
+    "import pandas as pd\n",
     "from damply import dirs\n",
+    "from readii.analyze.correlation import getFeatureCorrelations, getSelfCorrelations\n",
+    "from readii.io.loaders import loadFeatureFilesFromImageTypes, loadImageDatasetConfig\n",
+    "from readii.io.writers.correlation_writer import CorrelationWriter\n",
     "from readii.process.config import get_full_data_name\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
     "\n",
     "\n",
     "# from palettable.colorbrewer.diverging import PuOr_4\n",
