--- a/sandbox/debug_make_negative_controls.ipynb
+++ b/sandbox/debug_make_negative_controls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "62c01221",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "66eb2df1",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "156538ca",
    "metadata": {},
    "outputs": [],
@@ -169,10 +169,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1d5f8035",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "DirectoryNameNotFoundError",
+     "evalue": "Project directory name 'CONFIG' not found in configuration or does not exist at '/Users/katyscott/Documents/BHKLab_GitHub/readii_2_roqc/sandbox/config'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mDirectoryNameNotFoundError\u001b[39m                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m     logger.error(message)\n\u001b[32m      7\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(message)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m config_dir_path = \u001b[43mdirs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mCONFIG\u001b[49m / \u001b[33m'\u001b[39m\u001b[33mdatasets\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     11\u001b[39m dataset_config = loadImageDatasetConfig(dataset, config_dir_path)\n\u001b[32m     13\u001b[39m dataset_name = dataset_config[\u001b[33m'\u001b[39m\u001b[33mDATASET_NAME\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/BHKLab_GitHub/readii_2_roqc/.pixi/envs/default/lib/python3.12/site-packages/damply/dmpdirs/__init__.py:226\u001b[39m, in \u001b[36mDamplyDirs.__getattr__\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m    203\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Get attribute for a directory name.\u001b[39;00m\n\u001b[32m    204\u001b[39m \n\u001b[32m    205\u001b[39m \u001b[33;03mArgs:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    213\u001b[39m \u001b[33;03m    DirectoryNameNotFoundError: If the directory doesn't exist\u001b[39;00m\n\u001b[32m    214\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    215\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m name.isupper() \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m [\n\u001b[32m    216\u001b[39m \t\u001b[33m'\u001b[39m\u001b[33mPROJECT_ROOT\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    217\u001b[39m \t\u001b[33m'\u001b[39m\u001b[33mRAWDATA\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m    224\u001b[39m \t\u001b[33m'\u001b[39m\u001b[33mNOTEBOOKS\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    225\u001b[39m ]:\n\u001b[32m--> \u001b[39m\u001b[32m226\u001b[39m \t\u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_dir_path\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    227\u001b[39m errmsg = (\n\u001b[32m    228\u001b[39m \t\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m is not a valid directory name. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    229\u001b[39m \t\u001b[33m'\u001b[39m\u001b[33mValid names are: PROJECT_ROOT, RAWDATA, PROCDATA, RESULTS, \u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m    230\u001b[39m \t\u001b[33m'\u001b[39m\u001b[33mMETADATA, LOGS, CONFIG, SCRIPTS, NOTEBOOKS\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m    231\u001b[39m )\n\u001b[32m    232\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(errmsg)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/BHKLab_GitHub/readii_2_roqc/.pixi/envs/default/lib/python3.12/site-packages/damply/dmpdirs/__init__.py:198\u001b[39m, in \u001b[36mDamplyDirs._get_dir_path\u001b[39m\u001b[34m(self, dir_name)\u001b[39m\n\u001b[32m    196\u001b[39m \u001b[38;5;66;03m# Check if directory exists and raise error if not\u001b[39;00m\n\u001b[32m    197\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m path.exists():\n\u001b[32m--> \u001b[39m\u001b[32m198\u001b[39m \t\u001b[38;5;28;01mraise\u001b[39;00m DirectoryNameNotFoundError(dir_name, \u001b[38;5;28mstr\u001b[39m(path))\n\u001b[32m    200\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m path\n",
+      "\u001b[31mDirectoryNameNotFoundError\u001b[39m: Project directory name 'CONFIG' not found in configuration or does not exist at '/Users/katyscott/Documents/BHKLab_GitHub/readii_2_roqc/sandbox/config'"
+     ]
+    }
+   ],
    "source": [
     "dataset = \"NSCLC-Radiomics\"\n",
     "random_seed = 10\n",
@@ -1215,7 +1229,166 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c480cfed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "477f6c83",
+   "metadata": {},
+   "source": [
+    "# Update readii index checking for overwrite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1a88052f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requested negative controls have already been generated or are listed in the readii index as if they have been. Set overwrite to true if you want to re-process these.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "readii_index_file = Path(\"/Users/katyscott/Documents/BHKLab_GitHub/readii_2_roqc/data/procdata/TCIA_NSCLC-Radiomics/images/readii_NSCLC-Radiomics/readii_NSCLC-Radiomics_index.csv\")\n",
+    "overwrite = False\n",
+    "\n",
+    "dataset_config = loadImageDatasetConfig(\"NSCLC-Radiomics.yaml\", \"/Users/katyscott/Documents/BHKLab_GitHub/readii_2_roqc/config/datasets\")\n",
+    "\n",
+    "regions, permutations, _crop = get_readii_settings(dataset_config)\n",
+    "seed = 10\n",
+    "# Set up negative control manager with settings from config\n",
+    "manager = NegativeControlManager.from_strings(\n",
+    "    negative_control_types=permutations,\n",
+    "    region_types=regions,\n",
+    "    random_seed=seed\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "if readii_index_file.exists() and not overwrite: \n",
+    "    # Load in readii index and check:\n",
+    "    # 1. if all negative controls requested have been extracted\n",
+    "    # 2. for all of the patients\n",
+    "    readii_index = pd.read_csv(readii_index_file)\n",
+    "\n",
+    "\n",
+    "    processed_image_types = readii_index[['Permutation', 'Region']].drop_duplicates().sort_values(by=['Permutation'], ignore_index=True)\n",
+    "\n",
+    "    requested_image_types = pd.DataFrame(data = itertools.product([permutation.name() for permutation in manager.negative_control_strategies],\n",
+    "                                                                  [region.name() for region in manager.region_strategies]),\n",
+    "                                         columns = ['Permutation', 'Region']).sort_values(by='Permutation', ignore_index=True)\n",
+    "    \n",
+    "    # Check if the number of negative control types do not match\n",
+    "    if processed_image_types.size != requested_image_types.size:\n",
+    "        print(\"Different image types requested, continuing generation.\")\n",
+    "    \n",
+    "    # Check if the values of the negative control types do not match\n",
+    "    elif not (processed_image_types == requested_image_types).all(axis=None): \n",
+    "        print('Different image types requested, continuing generation.')\n",
+    "\n",
+    "    else:\n",
+    "        print(\"Requested negative controls have already been generated or are listed in the readii index as if they have been. Set overwrite to true if you want to re-process these.\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "f06aa9d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Permutation",
+         "rawType": "bool",
+         "type": "boolean"
+        },
+        {
+         "name": "Region",
+         "rawType": "bool",
+         "type": "boolean"
+        }
+       ],
+       "ref": "f4ecd6ce-7eb1-4971-ad7f-b83d09f2e32d",
+       "rows": [
+        [
+         "0",
+         "True",
+         "False"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 1
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Permutation</th>\n",
+       "      <th>Region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Permutation  Region\n",
+       "0         True   False"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed_image_types == requested_image_types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e959ea90",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1223,7 +1396,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1237,7 +1410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
